syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcPostComment";

service PostComment {
  rpc AddPost (PostRequest) returns (PostResponse);
  rpc DeletePostById (Id) returns (UniversalResponse);
  rpc GetPostById (Id) returns (PostResponse);
  rpc UpdatePost (PostRequestUpdate) returns (PostResponse);
  rpc GetAllPosts (google.protobuf.Empty) returns (PostsRespose);

  rpc AddComment (CommentRequest) returns (CommentResponse);
  rpc GetCommentById (Id) returns (CommentResponse);
  rpc UpdateComment (CommentRequestUpdate) returns (CommentResponse);
}

message PostRequest {
  string description = 1;
  string domain = 2;
  repeated CommentRequest comments = 3;
}

message PostRequestUpdate {
    string id = 1;
    PostRequest newPost = 2;
}

message Id {
    string Id = 1;
}

message UniversalResponse {
    bool succes = 1;
    string errorMessage = 2;
}

message CommentRequest {
    string text = 1;
}

message CommentRequestUpdate {
    string id = 1;
    CommentRequest newComment = 2;
}

message PostsRespose {
    repeated PostResponse posts = 1;
}

message PostResponse {
  string postId = 1;
  string description = 2;
  string domain = 3;
  google.protobuf.Timestamp date = 4;
  repeated CommentResponse comments = 5;
}

message CommentResponse {
    string commentId = 1;
    string text = 2;
}
